# Agentic-AI

./: README.md  pyproject.toml
session_1/langchain/: .env.example  llm.py  lm-studio.py  structred_outputs.py
session_1/openai/: llm.py  structured_outputs.py
session_2/langchain/: function_call.py
session_2/langgraph/: agent.py  gantt_chart.py
session_2/openai/: function_call.py
session_3/langgraph/: example_1.ipynb
session_4/telegram_bot/: example.py  main.py  pyproject.toml
session_4/telegram_bot/src/: bot.py  download_handler.py  error_handler.py  example.ipynb  file_type.py  question_answer.py  states.py  upload_handler.py
session_5/: disk_usage.sh  pyproject.toml
session_5/src/: agent.py  example.ipynb  example_2.ipynb  example_3.ipynb  generated_script.sh  sample.ipynb  script.sh  script_agent.py
session_6/: client.py  main.py  mcp_langchain_use.py  pyproject.toml  server.py
